
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int errno ;
 int exit (int ) ;
 int fprintf (int ,char*,char*) ;
 int send (int,char*,int,int ) ;
 int stderr ;
 char* strerror (int ) ;

__attribute__((used)) static int
sock_send (int fd, char *src, int len)
{
  int n;
  if ((n = send (fd, src, len, 0)) < 0)
    {
      fprintf (stderr, "sock_send: send() - %s\n", strerror (errno));
      exit (EXIT_FAILURE);
    }

  return (n);
}
